--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
    <button onclick="loadData()">Load Data</button>
+   <button onclick="loadData2()">Load Data2</button>
+   <button onclick="loadUsers()">Load Users</button>
     <script src="js/fetch.js"></script>
+    <script src="js/apps.js"></script>
 </body>
 </html>
