shod name coll api

--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Explore Api </title>
 </head>
+
 <body>
-   <button onclick="loadData()">Load Data</button>
-   <button onclick="loadData2()">Load Data2</button>
-   <button onclick="loadUsers()">Load Users</button>
+    <button onclick="loadData()">Load Data</button>
+    <button onclick="loadData2()">Load Data2</button>
+    <button onclick="loadUsers()">Load Users</button>
+    <button onclick="loadUser3()">Load user</button>
+
+    <div>
+        <ul id="ul-continer"></ul>
+    </div>
+
+    <!-- script  -->
+    <script src="js/index.js"></script>
     <script src="js/fetch.js"></script>
     <script src="js/apps.js"></script>
 </body>
+
 </html>
