show get data in api

--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
         <ul id="ul-continer"></ul>
     </div>
 
+    <section>
+        <div id="show-data-table">
+            <ul>
+                <!-- <li>load -1</li>
+                <li>load -2</li>
+                <li>load -3</li>
+                <li>load -4</li>
+                <li>load -5</li> -->
+            </ul>
+        </div>
+        <button onclick="shodData()">show Data</button>
+    </section>
+
     <!-- script  -->
+    <script src="js/showData.js"></script>
     <script src="js/index.js"></script>
     <script src="js/fetch.js"></script>
     <script src="js/apps.js"></script>
