--- a/post.html
+++ b/post.html
@@ -11,6 +11,21 @@
             text-align: center;
             border-bottom: 4px solid aqua;
         }
+        .card{
+            background-color: gray;
+            padding: 20px;
+            margin: 10px;
+            border-radius: 20px;
+            border: 4px solid skyblue;
+            color: aliceblue;
+            width: 20%;
+        }
+        #post-container{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            background-color:rgba(128, 128, 128, 0.212);
+        }
     </style>
 </head>
 <body>
